fixed prof card overflow bug

--- a/frontend/src/styles/profCard.css
+++ b/frontend/src/styles/profCard.css
@@ -3,9 +3,8 @@
     display: flex;
     position: relative;
     flex-direction: column;
-    width: 12rem;
+    min-width: 12rem;
     height: 18rem;
-
     color: #414141;
 
     overflow: hidden;
