--- a/frontend/src/styles/research.css
+++ b/frontend/src/styles/research.css
@@ -190,27 +190,29 @@
 
 
 
-#projBody{
+.projBody{
     position: relative;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
 }
-#publicationsSection{
+.publicationsSection{
     position : relative;
     top: -2em;
     display: flex;
     flex-direction: column;
     border-radius: 1em;
     background-color: #ffffff;
-    width: 90%;
+    width: 94%;
+
+    align-self: center;
 }
-#profScroll{
+.profScroll{
     display: flex;
     overflow-x: auto;
     justify-content: left;
     min-height: 25rem;
     min-width: 100%;
-    padding: 3rem 5rem;
+    padding: 3rem 3rem;
 }
 
